# husky_foxy

./: README.md  custom_nav_stack_pkg.7z  joy_remapper.py
custom_nav_stack_pkg/: CMakeLists.txt  package.xml
custom_nav_stack_pkg/include/ompl_example_2d/: ompl_example_2d.hpp
custom_nav_stack_pkg/scripts/: custom_nav_stack.py  mode_control.py  path_planner.py
custom_nav_stack_pkg/src/: config.txt  cpp_node.cpp  lidar_cpp_node.cpp  occupancy_grid_generator.cpp  ompl_example_2d.cpp  path_planner.cpp
gps_goal/gps_goal/: custom_nav_stack.py  destination_lat_long.txt  gps_driver.py
husky/husky_control/config/: control.yaml  localization.yaml  localization_ORIG.yaml  teleop_flysky.yaml  teleop_logitech.yaml  twist_mux.yaml
husky/husky_control/launch/: control.launch.py  control.launch_ORIG.py  teleop_base.launch.py  teleop_joy.launch.py  teleop_pub_vel.launch.py
husky/husky_description/urdf/: husky.urdf.xacro  husky_macro.urdf.xacro
husky/husky_description/urdf/accessories/: VLP-16.urdf.xacro
husky/husky_gazebo/: gps_utm_map.py  lauren_script.py  robot_navigator.py  steve_script.py
husky/husky_gazebo/launch/: display.launch.py  gazebo.launch.py  husky_playpen.launch.py
husky/husky_gazebo/worlds/: empty_cones.world  empty_world.sdf  empty_world_with_robot_code.world  penguin_world.world
husky/husky_navigation/: CMakeLists.txt
husky/husky_navigation/launch/: move_base.launch
husky/husky_viz/: CMakeLists.txt  package.xml
husky/husky_viz/config/: ekf.yaml
husky/husky_viz/launch/: view_robot.launch.py
husky/husky_viz/rviz/: custom_config.rviz  custom_config_pcl.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_nav_stack_pkg/lib/custom_nav_stack_pkg/: cpp_executable  custom_nav_stack.py
install/custom_nav_stack_pkg/share/ament_index/resource_index/package_run_dependencies/: custom_nav_stack_pkg
install/custom_nav_stack_pkg/share/ament_index/resource_index/parent_prefix_path/: custom_nav_stack_pkg
install/custom_nav_stack_pkg/share/custom_nav_stack_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_nav_stack_pkg/share/custom_nav_stack_pkg/cmake/: custom_nav_stack_pkgConfig-version.cmake  custom_nav_stack_pkgConfig.cmake
install/custom_nav_stack_pkg/share/custom_nav_stack_pkg/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
